cabal-version:       >=1.10

name:                snap-wai
version:             0.1.0.0
synopsis:            Run a WAI application in a Snap handler
-- description:
-- bug-reports:
license:             BSD3
author:              Rodney Lorrimar
maintainer:          dev@rodney.id.au
-- copyright:
category:            Web
build-type:          Simple

library
  exposed-modules:   Snap.Wai
  -- other-modules:
  default-extensions:
      OverloadedStrings
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , snap-core
                     , http-types
                     , wai
                     , vault
                     , io-streams
                     , text
                     , bytestring
                     , binary
                     , case-insensitive
                     , monad-control
                     , containers

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language:
      Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  build-depends:
      base
    , snap-wai
    , snap-core
    , http-types
    , wai
    , vault
    , io-streams
    , text
    , bytestring
    , bytestring-builder
    , case-insensitive
    , monad-control
    , containers
    , directory
    , deepseq
    , hspec
    , http-types
    , QuickCheck
    , servant
    , servant-server
    , temporary
    , text
    , unordered-containers
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Main.hs
  -- other-modules:
    -- Snap.WaiSpec
